<resources>
    <string name="app_name">COMP2000</string>
    <string name="edit_message">Enter a Message</string>
    <string name="button_send">Send</string>
    <string name="button">Button</string>
    <string name="help">Help</string>
    <string name="welcome">Welcome</string>
    <string name="name">Name: </string>
    <string name="address_line1">Address Line 1 </string>
    <string name="last_name">Last Name </string>
    <string name="first_name">First Name </string>
    <string name="city">City </string>
    <string name="postcode">Postcode </string>
    <string name="have_an_account_login_here">Have an account? Login Here.</string>
    <string name="hint">hint</string>
    <string name="submit">Submit</string>
    <string name="make_your_bookings_here">Make Your Bookings Here!</string>
    <string name="admin">Admin</string>
    <string name="make_a_booking">Make a Booking</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="textview">TextView</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_username">Enter Username</string>
    <string name="no_account_sign_up_here">No Account? Sign Up Here?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="admin_log_in">Admin Log In</string>
    <string name="admin_email">Admin Email</string>
    <string name="admin_password">Admin Password</string>
    <string name="booking_history">Booking History</string>
    <string name="barn">Barn</string>
    <string name="bedroom_1">Bedroom 1</string>
    <string name="bedroom_2">Bedroom 2</string>
    <string name="bedroom_3">Bedroom 3</string>
    <string name="shepard_s_hut">Shepard\'s Hut</string>
    <string name="your_booking_history">Your Booking History</string>
    <string name="your_account">Your Account</string>
    <string name="edit_account">Edit Account</string>
    <string name="edit_your_account_details">Edit Your Account Details</string>
    <string name="submit_changes">Submit Changes</string>
    <string name="thank_you_for_your_booking">Thank You For Your Booking</string>
    <string name="enjoy_your_stay">Enjoy Your Stay!!</string>
    <string name="home">Home</string>
    <string name="make_a_booking_as_a_guest">Make a Booking as a Guest</string>
    <string name="pay">Pay</string>
    <string name="room_type">Room Type</string>
    <string name="price_per_night">Price per Night</string>
    <string name="total">Total</string>
    <string name="card_number">Card Number</string>
    <string name="bookings_available">Bookings Available</string>
    <string name="back">Back</string>
</resources>